--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,79 @@ on:
         required: false
         default: false
         type: boolean
+      # Playwright Configuration Options
+      playwright_workers:
+        description: 'Number of Playwright workers'
+        required: false
+        default: '11'
+        type: string
+      playwright_browsers:
+        description: 'Browsers to test (chromium,firefox,webkit,all)'
+        required: false
+        default: 'all'
+        type: choice
+        options:
+          - all
+          - chromium
+          - firefox
+          - webkit
+          - chromium,firefox
+          - chromium,webkit
+          - firefox,webkit
+      playwright_devices:
+        description: 'Device types to test'
+        required: false
+        default: 'desktop,mobile'
+        type: choice
+        options:
+          - desktop,mobile
+          - desktop
+          - mobile
+          - tablet
+          - desktop,mobile,tablet
+          - desktop,tablet
+          - mobile,tablet
+          - desktop-large
+          - desktop-small
+          - all-devices
+      playwright_headed:
+        description: 'Run Playwright tests in headed mode'
+        required: false
+        default: false
+        type: boolean
+      playwright_debug:
+        description: 'Enable Playwright debug mode'
+        required: false
+        default: false
+        type: boolean
+      playwright_retries:
+        description: 'Number of test retries'
+        required: false
+        default: '2'
+        type: string
+      playwright_timeout:
+        description: 'Test timeout in milliseconds'
+        required: false
+        default: '30000'
+        type: string
+      playwright_reporter:
+        description: 'Test reporter format'
+        required: false
+        default: 'junit'
+        type: choice
+        options:
+          - junit
+          - html
+          - json
+          - list
+          - dot
+          - line
+          - github
+      playwright_base_url:
+        description: 'Base URL for tests'
+        required: false
+        default: 'https://auro-connect-r9mk.onrender.com'
+        type: string
 
 env:
   NODE_VERSION: '18'
@@ -728,9 +801,222 @@ jobs:
       - name: 🎭 Run E2E Tests
         id: e2e-tests
         working-directory: frontend
+        env:
+          PLAYWRIGHT_WORKERS: ${{ github.event.inputs.playwright_workers || '11' }}
+          PLAYWRIGHT_BROWSERS: ${{ github.event.inputs.playwright_browsers || 'all' }}
+          PLAYWRIGHT_DEVICES: ${{ github.event.inputs.playwright_devices || 'desktop,mobile' }}
+          PLAYWRIGHT_HEADED: ${{ github.event.inputs.playwright_headed || 'false' }}
+          PLAYWRIGHT_DEBUG: ${{ github.event.inputs.playwright_debug || 'false' }}
+          PLAYWRIGHT_RETRIES: ${{ github.event.inputs.playwright_retries || '2' }}
+          PLAYWRIGHT_TIMEOUT: ${{ github.event.inputs.playwright_timeout || '30000' }}
+          PLAYWRIGHT_REPORTER: ${{ github.event.inputs.playwright_reporter || 'junit' }}
+          PLAYWRIGHT_BASE_URL: ${{ github.event.inputs.playwright_base_url || 'https://auro-connect-r9mk.onrender.com' }}
         run: |
           START_TIME=$(date +%s)
-          npm run test:e2e:ci 2>&1 | tee e2e-output.log || true
+          
+          # Build Playwright command with configuration options
+          PLAYWRIGHT_CMD="npx playwright test"
+          
+          # Set number of workers
+          PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --workers=$PLAYWRIGHT_WORKERS"
+          
+          # Set retry count
+          PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --retries=$PLAYWRIGHT_RETRIES"
+          
+          # Set timeout
+          PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --timeout=$PLAYWRIGHT_TIMEOUT"
+          
+          # Set reporter
+          PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --reporter=$PLAYWRIGHT_REPORTER"
+          
+          # Configure browsers/projects based on selection
+          if [ "$PLAYWRIGHT_BROWSERS" != "all" ]; then
+            # Handle specific browser selection with device filtering
+            case "$PLAYWRIGHT_DEVICES" in
+              "desktop")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium"
+                    ;;
+                  "firefox")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=firefox"
+                    ;;
+                  "webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=webkit"
+                    ;;
+                  "chromium,firefox")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=firefox"
+                    ;;
+                  "chromium,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=webkit"
+                    ;;
+                  "firefox,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=firefox --project=webkit"
+                    ;;
+                esac
+                ;;
+              "mobile")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=mobile-chrome"
+                    ;;
+                  "webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=mobile-safari"
+                    ;;
+                  "chromium,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=mobile-chrome --project=mobile-safari"
+                    ;;
+                esac
+                ;;
+              "tablet")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=tablet-chrome"
+                    ;;
+                  "webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=tablet-safari"
+                    ;;
+                  "chromium,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=tablet-chrome --project=tablet-safari"
+                    ;;
+                esac
+                ;;
+              "desktop-large")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=desktop-large"
+                    ;;
+                esac
+                ;;
+              "desktop-small")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=desktop-small"
+                    ;;
+                esac
+                ;;
+              "desktop,mobile")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=mobile-chrome"
+                    ;;
+                  "firefox")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=firefox"
+                    ;;
+                  "webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=webkit --project=mobile-safari"
+                    ;;
+                  "chromium,firefox")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=firefox --project=mobile-chrome"
+                    ;;
+                  "chromium,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=webkit --project=mobile-chrome --project=mobile-safari"
+                    ;;
+                  "firefox,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=firefox --project=webkit --project=mobile-safari"
+                    ;;
+                esac
+                ;;
+              "desktop,tablet")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=tablet-chrome"
+                    ;;
+                  "webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=webkit --project=tablet-safari"
+                    ;;
+                  "chromium,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=webkit --project=tablet-chrome --project=tablet-safari"
+                    ;;
+                esac
+                ;;
+              "mobile,tablet")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=mobile-chrome --project=tablet-chrome"
+                    ;;
+                  "webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=mobile-safari --project=tablet-safari"
+                    ;;
+                  "chromium,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=mobile-chrome --project=mobile-safari --project=tablet-chrome --project=tablet-safari"
+                    ;;
+                esac
+                ;;
+              "desktop,mobile,tablet"|"all-devices")
+                case "$PLAYWRIGHT_BROWSERS" in
+                  "chromium")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=mobile-chrome --project=tablet-chrome"
+                    ;;
+                  "firefox")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=firefox"
+                    ;;
+                  "webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=webkit --project=mobile-safari --project=tablet-safari"
+                    ;;
+                  "chromium,firefox")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=firefox --project=mobile-chrome --project=tablet-chrome"
+                    ;;
+                  "chromium,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=webkit --project=mobile-chrome --project=mobile-safari --project=tablet-chrome --project=tablet-safari"
+                    ;;
+                  "firefox,webkit")
+                    PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=firefox --project=webkit --project=mobile-safari --project=tablet-safari"
+                    ;;
+                esac
+                ;;
+            esac
+          else
+            # All browsers - filter by device type
+            case "$PLAYWRIGHT_DEVICES" in
+              "desktop")
+                PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=firefox --project=webkit"
+                ;;
+              "mobile")
+                PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=mobile-chrome --project=mobile-safari"
+                ;;
+              "tablet")
+                PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=tablet-chrome --project=tablet-safari"
+                ;;
+              "desktop-large")
+                PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=desktop-large"
+                ;;
+              "desktop-small")
+                PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=desktop-small"
+                ;;
+              "desktop,mobile")
+                PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=firefox --project=webkit --project=mobile-chrome --project=mobile-safari"
+                ;;
+              "desktop,tablet")
+                PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=chromium --project=firefox --project=webkit --project=tablet-chrome --project=tablet-safari"
+                ;;
+              "mobile,tablet")
+                PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --project=mobile-chrome --project=mobile-safari --project=tablet-chrome --project=tablet-safari"
+                ;;
+              "desktop,mobile,tablet"|"all-devices")
+                # Run all projects (default behavior)
+                ;;
+            esac
+          fi
+          
+          # Add headed mode if requested
+          if [ "$PLAYWRIGHT_HEADED" = "true" ]; then
+            PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --headed"
+          fi
+          
+          # Add debug mode if requested
+          if [ "$PLAYWRIGHT_DEBUG" = "true" ]; then
+            PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --debug"
+          fi
+          
+          # Add base URL if provided
+          if [ -n "$PLAYWRIGHT_BASE_URL" ]; then
+            PLAYWRIGHT_CMD="$PLAYWRIGHT_CMD --base-url=$PLAYWRIGHT_BASE_URL"
+          fi
+
+          echo "Running command: $PLAYWRIGHT_CMD"
+          $PLAYWRIGHT_CMD 2>&1 | tee e2e-output.log || true
+          
           END_TIME=$(date +%s)
           DURATION=$((END_TIME - START_TIME))
           
@@ -745,6 +1031,7 @@ jobs:
           echo "duration=${DURATION}s" >> $GITHUB_OUTPUT
           
           echo "E2E Tests: $PASSED passed, $FAILED failed, ${DURATION}s duration"
+          echo "Configuration: Workers=$PLAYWRIGHT_WORKERS, Browsers=$PLAYWRIGHT_BROWSERS, Devices=$PLAYWRIGHT_DEVICES"
           if [ "$FAILED" -gt "0" ]; then exit 1; fi
 
       - name: 🧹 Cleanup Servers
