--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -88,7 +88,7 @@ jobs:
 
         env:
 
-          SLACK_WEBHOOK_URL: ${{ secrets.slack-webhook-url }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
           GITHUB_CONTEXT: ${{ toJson(github) }}
 
